@@ -6,7 +6,7 @@
     <parent>
         <groupId>eu.griddigit.CimPal</groupId>
         <artifactId>CimPal</artifactId>
-        <version>2023.2.0.0</version>
+        <version>2025.9.7.1</version>
     </parent>
 
     <artifactId>CimPal-Main</artifactId>
@@ -27,9 +27,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>${jdk.version}</release>
                 </configuration>
             </plugin>
 
